# xtuples

./: .env  .gitignore  README.md  build_images.sh  go.work.sum  gomarvin.json  run  xtuples.proto
agent/: .gitignore  Dockerfile.xtuples_agent  build-image  gen.go  go.mod  go.sum  grpc.go  keydb.go  main.go
agent/redis/scripts/: mutate.lua  take.lua
common/: go.mod  task.go  utils.go
controller/: Dockerfile.xtuples_controller  config.go  go.mod  go.sum  main.go  router.go  server.go  xtuples_gomarvin.json
controller/conf/: config.go
controller/db/sql/: cron.sql  cron.sql.gen.txt  exec.sql
controller/internal/api/response/: response.go
controller/internal/api/v1/modules/cron_module/: body.gen.go  body.go  (+5 more)
controller/internal/api/v1/server/: router.go  server.go
controller/pkg/app/: app.go
controller/pkg/convert/: convert.go
controller/pkg/settings/: env.go
controller/pkg/settings/cli/: args.go
controller/pkg/settings/database/: database.go
controller/pkg/validate/: validate.go
controller/web/: package-lock.json  package.json  tsconfig.json
controller/web/src/: config.ts
controller/web/src/router/: index.ts
controller/web/src/ts/: gomarvin.ts
controller/web/src/views/: AuthView.vue  HomeView.vue
jobs/: .gitignore  Dockerfile.xtuples_jobs
jobs/pysrc/: LICENSE  README.md  pyproject.toml
jobs/pysrc/xtuples_jobs/: __init__.py  gengrpc  requirements.txt  server.py
services/: Dockerfile.xtuples_jobs
services/exemple/: Dockerfile.xtuples_exemple_agent  Dockerfile.xtuples_exemple_jobs  config.yaml
services/exemple/pysrc/: server.py
(+4 files in other folders)
